tests/error/bit_cast_padding6.bz
// error: value type '[[64: u8], u16, u8]' and result type '[[64: u8], u8, u16]' have incompatible paddings in bit cast
// note: value type has a padding of 1 byte at offset 67, but result type doesn't
function test()
{
	let t = [[64: u8], u16, u8]();
	let _ = __builtin_bit_cast([[64: u8], u8, u16], t);
}
